// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox checkbox: 0 1`] = `
<label
  className="checkbox"
>
  <input
    className="checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox-label"
  />
</label>
`;

exports[`checkbox checkbox: 1 1`] = `
<label
  className="checkbox"
>
  <input
    className="checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox-label"
  />
</label>
`;

exports[`checkbox checkbox: 2 1`] = `
<div
  className="checkbox"
>
  <input
    className="checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox-label"
  />
</div>
`;

exports[`checkbox checkbox: 3 1`] = `
<label
  className="checkbox"
>
  <input
    className="checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox-label"
  />
</label>
`;

exports[`checkbox checkbox: 4 1`] = `
<label
  className="checkbox"
>
  <input
    className="checkbox-input"
    defaultChecked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox-label"
  />
</label>
`;

exports[`checkbox checkbox: 5 1`] = `
<label
  className="checkbox"
>
  <input
    className="checkbox-input"
    defaultChecked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox-label"
  />
</label>
`;

exports[`checkbox checkbox: 6 1`] = `
<label
  className="checkbox checkbox-disabled"
>
  <input
    className="checkbox-input"
    disabled="disabled"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox-label"
  />
</label>
`;
